--- a/avaliacaotendencias/WebContent/index.html
+++ b/avaliacaotendencias/WebContent/index.html
@@ -1,10 +1,28 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title> Avaliacao</title>
+<link rel="stylesheet" type="text/css" href="css/padrao.css">
 </head>
 <body>
+	<!-- formulario -->
+	<form action="">
 
-</body>
-</html>
+		<label>Nome:</label><br> <input type="text" name="nome"> <br><label> Idade:</label><br> <input
+			type="text" name="idade"> <br> <br> <input
+			type="radio" name="sexo" value="masculino"> Masculino <input
+			type="radio" name="sexo" value="feminino"> Feminino <br>
+		<br> Cor: <br> <select name="menu">
+			<option value="0" selected>Branco</option>
+			<option value="1">Preto</option>
+			<option value="2">azul</option>
+			<option value="3">Amarelo</option>
+			<option value="4">Vermelho</option>
+			<option value="5">rosa</option>
+			<option value="6">verde</option>
+		</select><br> <br> <input type="submit" value="Enviar"><br>
+
+	</form>
+	<!-- fim formulario -->
