Cartões de visita

--- a/avaliacaotendencias/WebContent/index.html
+++ b/avaliacaotendencias/WebContent/index.html
@@ -26,3 +26,39 @@
 
 	</form>
 	<!-- fim formulario -->
+
+
+<div class="cartaoV">
+<div class="fotoP">
+	<img src = "img\masc.jpg"/>
+</div>
+
+<div class="textoF">
+	<p>
+	José<br >
+	21 anos<br >
+	Azul<br>
+	</p>
+</div>
+</div>
+
+
+<div class="cartaoV">
+<div class="fotoP">
+	<img src = "img\fem.jpg"/>
+</div>
+
+<div class="textoF">
+	<p>
+	Ana<br >
+	19 anos<br >
+	Rosa<br>
+	</p>
+</div>
+</div>
+
+
+
+</body>
+</html>
+	
